@@ -155,7 +155,7 @@ sub is_room {
    });
 }
 
-=item B<join_room ($con, $jid, $nick, $cb, %args)>
+=item B<join_room ($con, $jid, $nick, %args)>
 
 This method joins a room.
 
@@ -164,11 +164,11 @@ is to be used to send the necessary stanzas.
 C<$jid> should be the bare JID of the room.
 C<$nick> should be your desired nickname in the room.
 
-C<$cb> is called upon successful entering the room or
-if an error occurred. If no error occurred the first
-argument is a L<AnyEvent::XMPP::Ext::MUC::Room> object (the
-one of the joined room) and the second is a L<AnyEvent::XMPP::Ext::MUC::User>
-object, the one of yourself. And the third argument is undef.
+When you successfully entered the room a C<enter> event is emitted.  In case
+you created the room, and it is locked, a C<locked> event is emitted.  Please
+look in the C<EVENTS> section below for more details about how to handle
+C<locked> rooms. (You won't have to care about locked rooms if you
+didn't disable the C<create_instant> flag in C<%args>).
 
 If an error occurred and we couldn't join the room, the first two arguments are
 undef and the third is a L<AnyEvent::XMPP::Error::MUC> object signalling the error.
@@ -201,16 +201,22 @@ TODO: add C<since> attributes
 If you set C<$bool> to a true value we try to establish an instant room
 on joining if it doesn't already exist.
 
-The default for this flag is true! So if you want to creat an reserved room
+XXX XXX XXX 
+XXX XXX XXX 
+XXX XXX XXX 
+XXX XXX XXX 
+
+The default for this flag is true! So if you want to create an reserved room
 with custom creation in the beginning you have to pass a false value as C<$bool>.
 
 B<PLEASE NOTE:> If you set C<$bool> to a B<false> value you have to check the
-C<did_create_room> statusflag on your own instance of
-L<AnyEvent::XMPP::Ext::MUC::User> (provided as the second argument to the callback)
-to see whether you need to finish room creation! If you don't do this the room
-B<may stay LOCKED for ever>.
+C<did_create_room> status flag on your own instance of
+L<AnyEvent::XMPP::Ext::MUC::User> (provided as the second argument to the
+callback) to see whether you need to finish room creation! If you don't do this
+the room B<may stay LOCKED for ever>.
 
-See also the C<make_instant> and C<request_configuration> methods of L<AnyEvent::XMPP::Ext::MUC>.
+See also the C<make_instant> and C<request_configuration> methods of
+L<AnyEvent::XMPP::Ext::MUC>.
 
 =item password => $password
 
@@ -230,7 +236,7 @@ should take care of possible endless retries.
 =cut
 
 sub join_room {
-   my ($self, $con, $jid, $nick, $cb, %args) = @_;
+   my ($self, $con, $jid, $nick, %args) = @_;
 
    unless (exists $args{create_instant}) {
       $args{create_instant} = 1;
@@ -240,17 +246,32 @@ sub join_room {
 
    my $room = $self->install_room ($con, $jid);
 
-   my $pbj = prep_bare_jid $jid;
+   $room->{locked_cb} =
+      $args{create_instant} ? sub {
+         my ($room) = @_;
+
+         $room->make_instant (sub {
+            my ($room, $error) = @_;
+
+            if ($error) {
+               $self->event (join_error => $room, $error);
+            } else {
+               $self->event (enter => $room, $room->get_me);
+            }
+         });
+      } : undef;
 
    $room->{room_join_timer} =
       AnyEvent->timer (after => $timeout, cb => sub {
-         $self->uninstall_room ($con, $room);
          delete $room->{room_join_timer};
+         $self->uninstall_room ($con, $room);
+
          my $muce = AnyEvent::XMPP::Error::MUC->new (
             type => 'join_timeout',
             text => "Couldn't join room in time, timeout after $timeout\n"
          );
-         $cb->(undef, undef, $muce);
+         
+         $self->event (join_error => $room, $muce);
       });
 
    my $rcb_id;
@@ -261,37 +282,22 @@ sub join_room {
 
          if ($error->type eq 'nickname_in_use'
              && exists $args{nickcollision_cb}) {
+
             $nick = $args{nickcollision_cb}->($nick);
             $room->send_join ($nick, $args{password}, $args{history});
             return;
          }
 
-         delete $self->{room_join_timer}->{$pbj};
+         delete $room->{room_join_timer};
          $self->uninstall_room ($con, $room);
          $muc->unreg_cb ($rcb_id);
-         $cb->(undef, undef, $error);
       },
       enter => sub {
          my ($muc, $eroom, $user) = @_;
          return unless cmp_jid ($eroom->nick_jid, $room->nick_jid);
 
-         delete $self->{room_join_timer}->{$pbj};
+         delete $room->{room_join_timer};
          $muc->unreg_cb ($rcb_id);
-
-         if ($user->did_create_room && $args{create_instant}) {
-            $room->make_instant (sub {
-               my ($room, $error) = @_;
-
-               if ($error) {
-                  $cb->(undef, undef, $error);
-               } else {
-                  $cb->($room, $user, undef);
-               }
-            });
-
-         } else {
-            $cb->($room, $user, undef);
-         }
       }
    );
 
@@ -375,6 +381,31 @@ C<$error> is a L<AnyEvent::XMPP::Error::MUC> object.
 
 This event is emitted when a error occurred when joining a room.
 C<$error> is a L<AnyEvent::XMPP::Error::MUC> object.
+
+=item locked => $room
+
+This event is emitted when you disabled the 'create_instant'
+flag when calling C<join_room>. It means that you just created
+a new room, which is locked. You need to configure it before
+it is unlocked and others can enter.
+
+Please consult the methods C<make_instant>, C<request_configuration> and
+C<send_configuration> of L<AnyEvent::XMPP::Ext::MUC::Room> for more information
+about how to configure a room.
+
+B<NOTE:> You won't get another event when you finished configuring the room, so
+you maybe want to call this on the C<AnyEvent::XMPP::Ext::MUC> object when you
+finished configuring the room successfully:
+
+   $muc->event (enter => $room, $room->get_me);
+
+That could be helpful if you want to place some generic
+stuff in your C<enter> event handlers.
+
+B<NOTE2:> If you didn't disable the C<create_instant> flag of C<join_room> you
+won't have to care about a C<locked> event, as everything will be internally
+handled for you and you will get an C<enter> event if the room is finally
+setted up.
 
 =item enter => $room, $user
 
